修复WIN上的BUG